--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "d3": "^5.12.0",
     "d3-scale": "^3.1.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
